# tdf_results

./: .gitignore  .pre-commit-config.yaml  README.md  TDF_2.csv  TDF_3.csv  activity_list_2024.csv  activity_scrape.py  combine_csv.py  eda.py  france_loc.csv  french_locations.py  infodf.csv  infodf_1919_1903.csv  infodf_2024_1919.csv  locations.py  main.py  procycling.csv  protdf.csv  protdf_1919_1903.csv  pyproject.toml  ride_scraper.py  scrape_procycling.py  scrape_table.py  scrape_tdf.py  scrape_tdf_pro.py  scrape_test.py  segment.json  segment_scraper.py  sql_json.py  sql_strava_ids.py  sql_tdf_results.py  sql_upload.py  stat.json  strava_ids.csv  strava_ids_2010.csv  strava_ids_fin.csv  strava_name_scraper.py  strava_pro_ids.csv  strava_proid_scraper.py  test.py  (+4 more)
Docker/docker_vm/: Dockerfile
Docker/grid/: session_checker.py
analysis/: activity_list_2024.py  eda.py  grande.md  questions.md
data/: example.py  segment_2_2024.json  sql_json.py  stat_2_2024.json  stat_3_2024.json  stat_4_2024.json
data/pro_giro/: test.py
data/sql_uploaders/: sql_strava_names.py  sql_tdf_results.py
data_tools/data_cleaning/: clean_tdf.py  jsoniser.py  mile_cleaner.py  segment_jsoniser.py  stat_jsoniser.py
data_tools/sql_uploaders/: sql_json.py  sql_results.py  sql_strava_ids.py  sql_strava_names.py  sql_strava_tables.py  sqlite_json.py  (+6 more)
docker_vm/: Dockerfile
grid/: docker-compose.yml  session_killer.py
scrape/: activity_scrape.py
scripts/: 2024_list.csv  activity_list.csv  activity_list_1.csv  activity_list_2.csv  activity_list_3.csv  activity_list_4.csv  activity_no_scr.py  cleaner.py  main.py  sql_results.py  test.py
thrash/: test_mac.py  test_vm.py  zip_test.py
thrash_data/: infodf.csv  segment.csv  stat.json
(+72 files in other folders)
